--- a/src/main/webapp/mapviz/mapviz.html
+++ b/src/main/webapp/mapviz/mapviz.html
@@ -2,10 +2,10 @@
 
             <ul class="nav nav-wizard">
                 <li ui-sref-active="active"><a ui-sref=".selectCallsign" data-toggle="tab">
-                        Step 1 - Select Callsign</a></li>
+                        Step 1: Select Callsign</a></li>
                 <li ui-sref-active="active"><a ui-sref=".selectDateRange" data-toggle="tab">
-                        Select Date Range</a></li>
-                <li ui-sref-active="active"><a ui-sref=".playback">Step 3 - Play Visualization</a></li>
+                        Step 2: Select Date Range</a></li>
+                <li ui-sref-active="active"><a ui-sref=".playback">Step 3: Play Visualization</a></li>
             </ul>
     
     
