visualization page updates

--- a/src/main/webapp/mapviz/selectCallsign.html
+++ b/src/main/webapp/mapviz/selectCallsign.html
@@ -31,12 +31,11 @@
 
 </div>
 
-
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-default fadeInHideShow"
-             ng-show="search.numberOfSpots > 0"">
+        <div class="panel panel-default fadeInHideShow" ng-show="search.numberOfSpots > 0">
             <div class="row">
+                
                 <div class="col-md-6">
                     <div class="panel-heading">
                         <h3 class="panel-title">Available data for callsign:
