refactoring to remove OGM usage, replaced with straight MongoDB api

--- a/src/main/webapp/mapviz/selectCallsign.html
+++ b/src/main/webapp/mapviz/selectCallsign.html
@@ -54,7 +54,7 @@
                         <h3 class="panel-title">Select Date Range for Visualization?</h3>
                     </div>
                     <div class="panel-body">
-                        <p><input class="btn btn default" type="button" 
+                        <p><input class="btn btn-primary" type="button" 
                                   ng-click="navigateToDateRangeSelection()" 
                                   value="Continue to select date range?"/>
                             or <a ng-click="resetCallsignSearch()">
