--- a/src/main/webapp/mapviz/playback.html
+++ b/src/main/webapp/mapviz/playback.html
@@ -1,5 +1,7 @@
-<div class="row">
-    
-    <div class="col-md-12">todo</div>
-    
+<!-- Visualization playback -->
+
+<div ng-include src="'/mapviz/historyPlaybackControls.html'">
+</div>
+
+<div ng-include src="'/mapviz/visualizationPlayback.html'">
 </div>
