--- a/src/main/webapp/mapviz/selectDateRange.html
+++ b/src/main/webapp/mapviz/selectDateRange.html
@@ -61,7 +61,7 @@
 
         <div class="row">
             <div class="col-md-3">
-                <button class="btn btn-default btn-primary" ng-click="retrieve()">Retrieve
+                <button class="btn btn-primary" ng-click="retrieve()">Retrieve
                     data</button>
             </div>
         </div>
@@ -81,7 +81,9 @@
                     may be more interesting to select a different date range that covers where you have consecutive
                     periods of data to visualize</p>
                 
-                <p>TODO: instruction, reselect or continue</p>
+                <p>You can either change your selected date range using the above form to select
+                a range than contains a greater density of spots to be visualized, or
+                <button class="btn btn-primary" ng-click="navigateToPlayback()">Continue to Visualization Playback</button></p>
             </div>
         </div>
     </div>
