--- a/src/main/webapp/mapviz/visualizationPlayback.html
+++ b/src/main/webapp/mapviz/visualizationPlayback.html
@@ -1,7 +1,4 @@
-<div class="row" ng-if="showMapControls">
-    <div ng-include src="'mapviz/historyPlaybackControls.html'"></div>
-</div>
-<div class="row" ng-if="showMapControls" style="height:450px;">
+<div class="row" style="height:450px;">
 
     <div class="col-md-offset-1 col-md-10" style="height:450px;">
         <map style="height:100%" center="37.7699298, -122.4469157" zoom="10">
