--- a/src/main/webapp/mapviz/visualizationPlayback.html
+++ b/src/main/webapp/mapviz/visualizationPlayback.html
@@ -1,10 +1,18 @@
 <div class="row" style="height:450px;">
 
     <div class="col-md-offset-1 col-md-10" style="height:450px;">
-        <map style="height:100%" center="37.7699298, -122.4469157" zoom="10">
-            <marker ng-repeat="pos in positions"
+        <map style="height:100%" center="37.7699298, -122.4469157" zoom="4">
+            <marker ng-repeat="pos in playbackData.positions"
                     position="{{pos.lat}}, {{pos.lng}}"></marker>
         </map>
     </div>	
 
 </div>
+
+<!-- debug
+<div class="row">
+<ul>
+<li ng-repeat="i in playbackControls.intervalBoundaries">{{i.intervalStartDate}} - {{i.intervalEndDate}}</li>
+</ul>
+</div>
+-->
