faq updates, added hot_deploy marker

--- a/src/main/webapp/faq.html
+++ b/src/main/webapp/faq.html
@@ -29,9 +29,9 @@
 				<div id="q1-body" class="panel-body">
 					<a name="q1"/>
 					<h4>What does this site do?</h4>
-					<p>This site provides an animated visualization of the station location of JT65 / JT9 signals 
+					<p>This site provides an animated visualization of the station locations of JT65 / JT9 signals 
 					transmitted and received by Amateur Radio operators over time. I built this site to
-					look at propagation patterns change, to visually see the location of
+					look at how propagation patterns change, to visually see the location of
 					stations I have received as an approximate indication of how propagation paths
 					change over time.</p>
 				</div>
@@ -50,14 +50,14 @@
 					period that you or the other stations were actively receiving. </p>
 					<p>For best results therefore, data received over a longer period of time (multiple
 					hours) is going to be more interesting to visualize that data received over
-					a relatively short period of time like 15 minutes. </p>
+					a relatively short period of time like 15 minutes (or even one or two hours).</p>
 					<p>This visualization is completely dependent on remote stations transmitting
-					over a period of time. For example, if you receive station A transmitting
-					over a 10 minute period but then their transmissions stop, this doesn't necessarily
+					over a period of time. For example, if you receive station 'A' transmitting
+					over a 10 minute period but then they stop transmitting, this doesn't necessarily
 					mean that the propagation path to that station has closed, because they may
 					have just turned off their radio. Even still, receiving stations from a general location
-					is a positive indication that a path is (or was) open to that location, and so
-					is still interesting to see on a map over time how this may change.</p>
+					is a positive indication that a path is (or was, at that time) open to that location, and so
+					it's still interesting to see on a map over time how this may change.</p>
 				</div>
 			</div>
 		</div>
