--- a/src/main/webapp/mapviz/selectDateRange.html
+++ b/src/main/webapp/mapviz/selectDateRange.html
@@ -76,7 +76,7 @@
                 <h3 class="panel-title">Distribution of data for selected date range</h3>
             </div>
             <div class="panel-body">
-                <p>This chart shows the availability of the uploaded data between your chosen dates. Darker colors indicate
+                <p>(TODO: in progress) This chart shows the availability of the uploaded data between your chosen dates. Darker colors indicate
                     where there is more data available to visualize. If there are many periods with no data available it
                     may be more interesting to select a different date range that covers where you have consecutive
                     periods of data to visualize</p>
