--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,7 +57,7 @@
 		  <h1>SpotViz</h1>
 		  <p>Historical visualization of JT65/JT9 signals received by Amateur Radio operators 
 		  around the world.</p>
-			<p>By Kevin Hooke KK6DCT / 
+			<p>By <a target="_new" href="http://www.kevinhooke.com">Kevin Hooke</a> KK6DCT / 
                         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.spotviz.info" data-text="Historical visualization of amateur radio signals" data-via="kevinhooke">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                         </p>
@@ -101,7 +101,7 @@
 		</div>
 		
 		<div class="row footer">
-			<div class="col-md-12">Kevin Hooke KK6DCT</div>
+			<div class="col-md-12"><a target="_new" href="http://www.kevinhooke.com">Kevin Hooke</a> KK6DCT</div>
 		</div>
 		
 	</div>
