--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -1,22 +1,17 @@
-<div class="row" ng-controller="AboutController">
-
-
-	<div class="row">
+<div class="row">
 		<div class="col-md-12">
 			<p>About context here</p>
 		</div>
+</div>
+
+<div class="row">
+	<div class="col-md-1">
+		Callsign QTH information provided by:	
 	</div>
-	
-	<div class="row">
-		<div class="col-md-1">
-			Callsign QTH information provided by:	
-		</div>
-		<div class="col-md-1">
-			<a href="http://www.hamqth.com">
-			<img src="http://www.hamqth.com/images/hamqth_125x125.png" border="1" height="125" width="125" alt="HamQTH.com - Free hamradio callbook">
-			</a>
-		</div>
-	
+	<div class="col-md-1">
+		<a target="_new" href="http://www.hamqth.com">
+		<img src="http://www.hamqth.com/images/hamqth_125x125.png" border="1" height="125" width="125" alt="HamQTH.com - Free hamradio callbook">
+		</a>
 	</div>
 
 </div>
