map center and zoom

--- a/src/main/webapp/mapviz/visualizationPlayback.html
+++ b/src/main/webapp/mapviz/visualizationPlayback.html
@@ -1,7 +1,7 @@
 <div class="row" style="height:450px;">
 
     <div class="col-md-offset-1 col-md-10" style="height:450px;">
-        <map style="height:100%" center="37.7699298, -122.4469157" zoom="4">
+        <map style="height:100%" center="37.7699298, -94.5" zoom="2">
             <marker ng-repeat="pos in playbackData.positions"
                     position="{{pos.lat}}, {{pos.lng}}"></marker>
         </map>
