--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -15,12 +15,13 @@
 
 	<div class="col-md-9">
 	<h4>How do I get started?</h4>
-	<p>If you have already uploaded a data log file from WSJT, you can click on 'Visualize' above to
+	<p>If you have already uploaded a data log file from WSJT, you can click on 
+	<a ui-sref="visualize.selectCallsign">'Visualize'</a> above to
 	pick a data/time range for playback of your data plotted on Google Maps. You can also view
-	anyone else's data that has already been updated - click 'Browse Data'.</p>
-	<p>To upload new data, click 'How To Upload Your Spots'.
+	anyone else's data that has already been updated - click 'Browse Data' (TODO).</p>
+	<p>To upload new data, click <a ui-sref="upload">'How To Upload Your Spots'</a>.
 	</p>
-	<p>Got questions? Check the FAQ.</p>
+	<p>Got questions? Check the <a ui-sref="faq">FAQ</a>.</p>
 	</div>
 
 
