--- a/src/main/webapp/howToUpload.html
+++ b/src/main/webapp/howToUpload.html
@@ -2,32 +2,92 @@
 	<div class="col-md-12">
 		<h3>How to Upload Your WSJT-X Data Files for Visualization</h3>
 		<p>To upload your data fies, you need to download and run the
-			uploader - for more details see here (TODO).</p>
+			uploader.</p>
+		<h4>Pre-reqs:</h4>
+		<ul>
+			<li>The uploader requires Java SE 8. Download from here
+				<a href="http://www.java.com/en/" target="_new">
+				http://www.java.com/en/</a> if you don't already have installed.</li>
+		</ul>
+	
+		<h4>Download:</h4>
+		<ul>
+			<li>Download SpotvizLogUploader-1.0.jar from the release page:
+				<a href="https://github.com/kevinhooke/WSJTLogParser/releases/tag/1.0" target="_new">
+				https://github.com/kevinhooke/WSJTLogParser/releases/tag/1.0</a></li>
+			<li>Save the downloaded jar to a folder locally</li>
+		</ul>
+		
+		<h4>To run:</h4>
+		<ul>
+			<li>Start a command prompt/shell/terminal, and from the command
+				line cd into the folder containing the downloaded jar and then type:</li>
+		</ul>
+		<code> java -jar SpotvizLogUploader-1.0.jar --callsign
+			YOUR_CALL --file /PATH/TO/WSJT-X/ALL.TXT </code>
+		<br/><br/>
+		<p>Where:</p>
+		<ul>
+			<li>YOUR_CALL is your callsign - this will be used to store your
+				uploaded data against, so when searching for the call on the
+				http://www.spotvi.info site you can find your uploaded data.</li>
+				<li>/PATH/TO/WSJT-X/ALL.TXT is the path to WSJT's ALL.TXT file (see
+				below for example locations depending on your platform.</li> 
+		</ul>
 
+		<p>The parser runs once a minute on the minute to sync with new
+			spots being logged to WSJT-X's ALL.TXT file. If you leave it running,
+			it will continue to watch the file for new updates and upload them
+			every minute. Otherwise you can run it one time, leave for a minute
+			to ensure it runs, and then Ctrl-C to end it.</p>
+
+		<h4>Path to WSJT-X ALL.TXT file</h4>
 		<p>Depending on the version of WSJT-X and the operating system you
 			are running on, your ALL.TXT data file will be in one of the
 			following locations:</p>
+
 	</div>
 </div>
 
-<div class="row">
-	<div class="col-md-12">
-		<p>On Mac OS X:</p>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">WSJT-X on Mac OS X</h3>
+  </div>
+  <div class="panel-body">
+    <h4>WSJT-X versions 1.3 and earlier</h4>
+    <p>Assuming you installed WSJT-X to the /Applications/ folder, use:</p>
+    <ul>
+    <li>--file "/Applications/WSJT-X/ALL.TXT"
+    </ul>
 
-		<p>For versions 1.4+:</p>
-		<p>/Users/[your-user-id]/Library/Application
-			Support/WSJT-X/ALL.TXT</p>
-	</div>
+    <h4>WSJT-X versions 1.4 and later</h4>
+    <p>In 1.4, the ALL.TXT is stored by default in your User folder, use:</p>
+    <ul>
+    <li>--file "/Users/USER_ID/Library/Application Support/WSJT-X/ALL.TXT"</li>
+    </ul>
+	<p>where USER_ID is your Mac user account that you logon as when running WSJT-X. If in doubt,
+	open a Terminal and type 'ls /Users' to find the name of your user home directory.</p> 
+  </div>
 </div>
 
-<div class="row">
-	<div class="col-md-12">
-		<p>On Linux:</p>
-	</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">WSJT-X on Windows 7 and 8.x</h3>
+  </div>
+  <div class="panel-body">
+    <p>Use:</p>
+    <ul>
+    <li>--file "C:/Users/USER_ID/AppData/Local/WSJT-X"</li>
+    </ul>
+    <p>where USER_ID is your Windows user account that you logon as when running WSJT-X.</p>
+  </div>
 </div>
 
-<div class="row">
-	<div class="col-md-12">
-		<p>On Windows:</p>
-	</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">WSJT-X on Linux</h3>
+  </div>
+  <div class="panel-body">
+    TODO
+  </div>
 </div>
