--- a/src/main/webapp/howToUpload.html
+++ b/src/main/webapp/howToUpload.html
@@ -29,8 +29,8 @@
 		<p>Where:</p>
 		<ul>
 			<li>YOUR_CALL is your callsign - this will be used to store your
-				uploaded data against, so when searching for the call on the
-				http://www.spotvi.info site you can find your uploaded data.</li>
+				uploaded data against, so when searching for your call 
+				you can find your uploaded data.</li>
 				<li>/PATH/TO/WSJT-X/ALL.TXT is the path to WSJT's ALL.TXT file (see
 				below for example locations depending on your platform.</li> 
 		</ul>
