--- a/src/main/webapp/faq.html
+++ b/src/main/webapp/faq.html
@@ -1,6 +1,5 @@
-<div class="container">
 	<div class="row">
-		<div class="col-med-12">
+		<div class="col-md-12">
 			<h3>FAQ</h3>
 			<p>Got a question about how SpotViz works? Check here for some
 				common questions and answers!</p>
@@ -8,7 +7,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-med-12">
+		<div class="col-md-12">
 			<div id="outer" class="panel panel-default">
 				<div id="questions" class="panel-body">
 					<ol>
@@ -24,7 +23,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-med-12">
+		<div class="col-md-12">
 			<div id="q1" class="panel panel-default">
 				<div id="q1-body" class="panel-body">
 					<a name="q1"/>
@@ -40,7 +39,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-med-12">
+		<div class="col-md-12">
 			<div id="q2" class="panel panel-default">
 				<div id="q2-body" class="panel-body">
 					<a name="q2"/>
@@ -65,7 +64,7 @@
 
 
 	<div class="row">
-		<div class="col-med-12">
+		<div class="col-md-12">
 			<div id="q3" class="panel panel-default">
 				<div id="q3-body" class="panel-body">
 					<a name="q3"/>
@@ -79,7 +78,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-med-12">
+		<div class="col-md-12">
 			<div id="q4" class="panel panel-default">
 				<div id="q4-body" class="panel-body">
 					<h4>Isn't this similar to what PSKReporter already does?</h4>
@@ -99,7 +98,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-med-12">
+		<div class="col-md-12">
 			<div id="q5" class="panel panel-default">
 				<div id="q5-body" class="panel-body">
 					<h4>TODO</h4>
@@ -108,4 +107,3 @@
 			</div>
 		</div>
 	</div>
-</div>
