--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,9 @@
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>
 
+	<!--  Bootstrap js -->
+	<script type="text/javascript" src="css/bootstrap-3.3.4-dist/js/bootstrap.min.js"></script>
+
 	<!-- Angular -->
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 	<!-- <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script> -->
@@ -57,6 +60,7 @@
 	  //send performed by Angularitcs
 	  //ga('send', 'pageview');
 	</script>
+	
 </head>
 
 <body>
@@ -72,7 +76,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                         </p>
 		</div>
-	
+		<div>
 		<nav class="navbar navbar-default">
 			<ul class="nav navbar-nav">
 <!-- 
@@ -86,13 +90,20 @@
 				<li><a ui-sref="home">Home</a></li>
 				<li><a ui-sref="visualize.selectCallsign">Visualize!</a></li>
 				<li><a ui-sref="upload">How to upload your spots</a></li>
+				<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse uploads<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a ui-sref="searchTopUploaders">Show top data uploaders</a></li>
+						<li><a ui-sref="searchUploadsByCallsign">List spot data by callsign</a></li>
+					</ul>
+				</li>
 				<li><a ui-sref="faq">FAQ</a></li>
 				<li><a ui-sref="bug">Report a bug/enhancement request</a></li>
 				<li><a ui-sref="about">About</a></li>
 
 			</ul>
 		</nav>
-	
+		</div>
+		
 		<!-- <div ng-view></div>  -->
 		<div ui-view></div>
 		
