minor ui updates

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,7 +70,7 @@
 	
 		<div id="myjumbotron" class="jumbotron">
 		  <h1>SpotViz</h1>
-		  <p>Historical visualization of JT65/JT9 signals received by Amateur Radio operators 
+		  <p>Historical visualization of FT8/JT9/JT65 signals received by Amateur Radio operators 
 		  around the world.</p>
 			<p>By <a target="_new" href="http://www.kevinhooke.com">Kevin Hooke</a> KK6DCT / 
                         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.spotviz.info" data-text="Historical visualization of amateur radio signals" data-via="kevinhooke">Tweet</a>
