--- a/src/main/webapp/mapviz/historyPlaybackControls.html
+++ b/src/main/webapp/mapviz/historyPlaybackControls.html
@@ -49,16 +49,23 @@
 	</div>
 	<div class="col-sm-6">
 		<div class="row">
-			<div class="col-sm-3">From</div>
-			<div class="col-sm-9">
+			<div class="col-sm-2">From</div>
+			<div class="col-sm-4">
 				{{playbackControls.intervalBoundaries[playbackControls.currentInterval].intervalStartDate}}
+			</div>
+			<div class="col-sm-4"> / 
+				{{playbackControls.intervalBoundaries[playbackControls.currentInterval].intervalStartDateLocal}}
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-3">to</div>
-			<div class="col-sm-9">
+			<div class="col-sm-2">to</div>
+			<div class="col-sm-4">
 				{{playbackControls.intervalBoundaries[playbackControls.currentInterval].intervalEndDate}}
 			</div>
+			<div class="col-sm-4">
+				{{playbackControls.intervalBoundaries[playbackControls.currentInterval].intervalEndDateLocal}}
+			</div>
+
 		</div>
 	</div>
 </div>
