replaced Google Maps with Leaflet, updated uploader instructions

--- a/src/main/webapp/howToUpload.html
+++ b/src/main/webapp/howToUpload.html
@@ -12,9 +12,9 @@
 	
 		<h4>Download:</h4>
 		<ul>
-			<li>Download SpotvizLogUploader-1.0.jar from the release page:
-				<a href="https://github.com/kevinhooke/WSJTLogParser/releases/tag/1.0" target="_new">
-				https://github.com/kevinhooke/WSJTLogParser/releases/tag/1.0</a></li>
+			<li>Download SpotvizLogUploader-2.0.0-with-dependencies.jar from the release page:
+				<a href="https://github.com/kevinhooke/WSJTLogParser/releases/tag/v2.0.0" target="_new">
+				https://github.com/kevinhooke/WSJTLogParser/releases/tag/v2.0.0</a></li>
 			<li>Save the downloaded jar to a folder locally</li>
 		</ul>
 		
@@ -23,7 +23,7 @@
 			<li>Start a command prompt/shell/terminal, and from the command
 				line cd into the folder containing the downloaded jar and then type:</li>
 		</ul>
-		<code> java -jar SpotvizLogUploader-1.0.jar --callsign
+		<code> java -jar SpotvizLogUploader-2.0.0-with-dependencies.jar --callsign
 			YOUR_CALL --file /PATH/TO/WSJT-X/ALL.TXT </code>
 		<br/><br/>
 		<p>Where:</p>
