--- a/src/main/webapp/mapviz/visualizationPlayback.html
+++ b/src/main/webapp/mapviz/visualizationPlayback.html
@@ -1,16 +1,17 @@
+<!-- Google maps
 <div class="row" style="height:450px;">
-<!-- 
+
     <div class="col-md-offset-1 col-md-10" style="height:450px;">
         <map style="height:100%" center="37.7699298, -94.5" zoom="2">
             <marker ng-repeat="pos in playbackData.positions"
                     position="{{pos.lat}}, {{pos.lng}}"></marker>
         </map>
     </div>	
- -->
 </div>
+-->
 
 <div style="height:500px;" ng-controller="uiLeafletController">
 
-	<leaflet id="map-simple-map" width="100%" height="480px" markers="playbackData.positions"></leaflet>
+	<leaflet id="map-simple-map" width="90%" height="100%" markers="playbackData.positions"></leaflet>
 
 </div>
